--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nearest Toilets</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
 </head>
 <body>
     <div id="map"></div>
